# LearningCpp

./: README.md
basic_glfw/: CMakeLists.txt  main.cpp  readme.md
basic_hello/: CMakeLists.txt  basic_hello.code-workspace  readme.md
basic_hello/include/: speech.h
basic_hello/src/: main.cpp  speech.cpp
basic_library/: CMakeLists.txt  main.cpp
basic_library/core/: engine.hpp
basic_library/src/core/: CMakeLists.txt  engine.cpp
basic_triangle/: CMakeLists.txt  basic_triangle.code-workspace  main.cpp  readme.md
